--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="main">
+
+    <div class="cat_menu">
+        Kategorie<br><hr>
+        <%= link_to "Wszystkie produtky", products_path %><br><br>
+        <% @categories.each do |c| %>
+            <%= link_to c.name, category_path(c) %><br>
+        <% end %>
+        <br>
+        <%= link_to 'Dodaj kategorie', new_category_path %>
+    </div>
+    <div class="content"><%= yield %></div>
+</div>
 
 </body>
 </html>
