some improvments in development

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,10 @@
         <%= link_to 'Dodaj kategorie', new_category_path %>
     </div>
     <div class="content"><%= yield %></div>
+  <div style="background-color: aqua"><%= request.remote_ip %></div>
 </div>
+
+
 
 </body>
 </html>
