--- a/app/views/user/products/index.html.erb
+++ b/app/views/user/products/index.html.erb
@@ -19,7 +19,7 @@
         <% i += 1 %>
       <tr>
         <td><%= i %></td>
-        <td><%= link_to product.name, product_path(product) %></td>
+        <td><%= link_to product.name, user_product_path(product) %></td>
         <td><%= product.description %></td>
         <td><%= product.price %></td>
       </tr>
@@ -37,3 +37,6 @@
 <%= @items = 'passed' %>
 <%= render 'partial', collection: @item, as: :item %>
 <% end %>
+
+
+<%= link_to 'New Product', new_user_product_path %>
